# rust-tui-template

./: .gitignore  Cargo.toml  cargo-generate.toml
src/: app.rs  cli.rs  consts.rs  main.rs  structs.rs
src/tabs/: about.rs  mod.rs
