[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]

[dependencies]
ctrlc = { version = "3.4.5", features = ["termination"] }
lazy_static = "1.5.0"
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
console-subscriber = "0.4.1"
dotenv = "0.15.0"
ratatui = { version = "0.29.0", features = ["macros", "serde", "all-widgets"] }
tui-logger = { version = "0.17.3", features = ["tracing-support"] }
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
clap = { version = "4.5.39", features = ["derive"] }
anyhow = "1.0.98"
itertools = "0.13.0"
strum = "0.26.3"
time = { version = "0.3.36", features = ["formatting", "macros"] }
color-eyre = { version = "0.6.5"}
futures = "0.3.31"
tokio-util = "0.7.15"
log = "0.4.22"
signal-hook = "0.3.18"
